--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-simple-import-sort": "^5.0.1",
     "tslint-microsoft-contrib": "^6.2.0",
-    "tslint": "^5.20.1"
+    "tslint": "^5.20.1 || 6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.18.0",
@@ -46,7 +46,7 @@
     "eslint-plugin-simple-import-sort": "^5.0.1",
     "pre-commit": "^1.2.2",
     "renovate-config-lddubeau": "^1.0.0",
-    "tslint": "^5.20.1",
+    "tslint": "^5.20.1 || 6",
     "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.7.5"
   },
