--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "pre-commit": "^1.2.2",
     "renovate-config-lddubeau": "^1.0.0",
-    "tslint": "^5.20.1 || 6",
+    "tslint": "^6.1.3",
     "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^4.0.2"
   },
